Fix whitespace on lead paragraphs

--- a/style.css
+++ b/style.css
@@ -129,6 +129,10 @@ img.rounded-circle.shadow-lg:not(#site-image) {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.7) !important;
 }
 
+.lead {
+  line-height: 1.3;
+}
+
 /* --- Callouts --- */
 
 :root,
